--- a/pizza/manifest.json
+++ b/pizza/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Database Pizze",
   "short_name": "Pizze",
-  "start_url": "index.html",
+  "start_url": "pizza/index.html",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#e74c3c",
