--- a/spesa/.github/workflows/aggiorna_menu.yml
+++ b/spesa/.github/workflows/aggiorna_menu.yml
@@ -2,15 +2,14 @@ name: Aggiorna Menu Settimanale
 
 on:
   schedule:
-    # Esegue ogni Lunedì alle 6:00 AM UTC
     - cron: '0 6 * * 1'
-  workflow_dispatch: # Ti permette di avviarlo a mano quando vuoi
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: write # Permesso per salvare il file nel repo
+      contents: write
       
     steps:
       - name: Checkout del codice
@@ -22,18 +21,23 @@ jobs:
           python-version: '3.9'
 
       - name: Installa librerie
-        run: |
-          pip install google-generativeai
+        run: pip install google-generativeai
 
+      # ESEGUE LO SCRIPT DENTRO LA CARTELLA SPESA
       - name: Esegui il Generatore IA
         env:
           GEMINI_KEY: ${{ secrets.GEMINI_KEY }}
-        run: python automazione.py
+        run: python spesa/automazione.py
 
-      - name: Salva i risultati (Commit)
+      # DEBUG: CONTROLLA SE IL FILE È STATO CREATO
+      - name: Controlla file
+        run: ls -l spesa/
+
+      # SALVA IL FILE DALLA CARTELLA SPESA
+      - name: Salva i risultati
         run: |
           git config --global user.name 'Robot Menu'
           git config --global user.email 'robot@menu.app'
-          git add menu/dati_settimanali.json
+          git add spesa/dati_settimanali.json
           git commit -m "Aggiornamento Menu Automatico" || echo "Nessuna modifica"
           git push
